@@ -1,0 +1,22 @@
+#
+# log4j configuration file
+# 2010.09.23
+
+
+log4j.rootLogger=INFO, stdout
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%-5p %d{yy-MM-dd HH:mm:ss,SSS}| %m%n
+#log4j.appender.stdout.layout.ConversionPattern=%-5p %d{yy-MM-dd HH:mm:ss,SSS}| %m |%C{1}:%M%n
+log4j.appender.stdout.target=System.err
+
+log4j.logger.org.apache.commons.httpclient=ERROR
+log4j.logger.org.mortbay=ERROR
+log4j.logger.org.springframework=FATAL
+log4j.logger.org.apache.catalina=INFO
+log4j.logger.org.apache.commons.digester=INFO
+log4j.logger.org.apache.commons.modeler=INFO
+log4j.logger.org.apache.jasper.compiler=INFO
+log4j.logger.org.apache.jasper.servlet.JspServlet=INFO
+log4j.logger.org.apache.tomcat.util.threads.ThreadPool=INFO
